--- a/package.json
+++ b/package.json
@@ -8,29 +8,29 @@
     "visualize": "meteor --production --extra-packages bundle-visualizer"
   },
   "dependencies": {
-    "@babel/runtime": "^7.11.2",
-    "@material-ui/core": "^4.9.12 || ^5.0.0-alpha.22",
-    "@material-ui/data-grid": "^4.0.0-alpha.22",
+    "@babel/runtime": "^7.14.8",
+    "@material-ui/core": "^4.12.2",
+    "@material-ui/data-grid": "^4.0.0-alpha.34",
     "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.54",
+    "@material-ui/lab": "^4.0.0-alpha.60",
     "@material-ui/pickers": "^3.2.10",
-    "@material-ui/x-grid-data-generator": "^4.0.0-alpha.22",
+    "@material-ui/x-grid-data-generator": "^4.0.0-alpha.34",
     "autobahn": "^20.9.2",
     "coingecko-api": "^1.0.10",
-    "decimal.js": "^10.2.1",
+    "decimal.js": "^10.3.1",
     "js-sha256": "^0.9.0",
-    "meteor-node-stubs": "^1.0.1",
+    "meteor-node-stubs": "^1.1.0",
     "moment": "^2.29.1",
     "near-api-js": "^0.40.0",
-    "npm": "^7.12.0",
+    "npm": "^7.20.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-material-ui-form-validator": "^2.1.4",
-    "react-number-format": "^4.4.4",
+    "react-number-format": "^4.6.4",
     "react-router-dom": "^5.2.0",
     "react-transition-group": "^4.4.1",
-    "regenerator-runtime": "~0.13.7"
+    "regenerator-runtime": "^0.13.9"
   },
   "meteor": {
     "mainModule": {
