--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-number-format": "^4.6.4",
     "react-router-dom": "^5.2.0",
     "react-transition-group": "^4.4.1",
+    "recharts": "^2.1.4",
     "regenerator-runtime": "^0.13.9"
   },
   "meteor": {
